# OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt  Config.h.in
OpenGL/: CMakeLists.txt
OpenGL/assets/shaders/: Texture.glsl  lamp.glsl  lighting.glsl
OpenGL/src/: Appilication.cpp  Config.h  Core.h  Log.cpp  Log.h  hzpch.h
OpenGL/src/Renderer/: Camera.h  Shader.cpp  Shader.h
